# dataclasses-json-extended

./: pyproject.toml
dataclasses_json/: __init__.py  api.py  cfg.py  core.py  custom_types.py  mm.py  serialization.py  utils.py
tests/: test_annotations.py  test_global_config.py  test_undefined_parameters.py
